# MCPNorthwind

./: README.md  agent.py  docker-compose.yml  pyproject.toml  server.py
