[project]
name = "mcpnorthwind"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel-Wiech",email = "daniel.wiech1@gmail.com"}
]
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "mcp (>=1.28.0,<2.0.0)",
    "langchain-ollama (>=1.1.0,<2.0.0)",
    "langchain-community (>=0.4.2,<0.5.0)",
    "fastmcp (>=3.4.2,<4.0.0)",
    "requests (>=2.34.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
